# ranker

./: .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
benchmarks/: accuracy_vs_budget.py
docs/: design.md
ranker/: item.py  player.py  ranker.py  test_items.txt  test_ranker.py  tourney.py
ranker/cpp/: low_vol_ranker.cpp  low_vol_ranker.h  player.cpp  player.h
research/: bayesian-ranking-posteriors-and-ux.md  miscellany-chatgpt.md  noisy-pairwise-sorting.md  probabilistic-ranking-models.md
src/ranker/: __init__.py  __main__.py  cli.py  hodge.py  inference.py  library.py  model.py  ranker.py  select.py  session.py  stopping.py  tiermaker.py  tiers.py
src/ranker/legacy/: __init__.py  player.py
src/ranker/web/: __init__.py  __main__.py  app.py
src/ranker/web/static/: app.js  index.html  style.css
tests/: test_bt.py  test_cli.py  test_legacy.py  test_library.py  test_ranker.py  test_tiermaker.py  test_web.py
