[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ranker"
version = "0.1.0"
description = "Efficient library for ranking many items from sparse, adaptive pairwise comparisons."
authors = [{ name="Max Jiang", email="maxjiang216@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "numpy",
    "scikit-learn",
    "pillow"
]
requires-python = ">=3.8"

[project.scripts]
ranker = "ranker.cli:main"
ranker-web = "ranker.web.__main__:main"

[project.optional-dependencies]
web = ["fastapi", "uvicorn"]

[dependency-groups]
dev = ["pytest", "httpx", "fastapi", "uvicorn"]

[tool.hatch.build.targets.wheel]
packages = ["src/ranker"]

[tool.hatch.build.targets.wheel.force-include]
"src/ranker/web/static" = "ranker/web/static"
